# robotSpine

./: .gitmodules  README.MD  workspace.code-workspace
arduino_client/: platformio.ini
arduino_client/src/: BrokerSerial.cpp  BrokerSerial.h  Button.h  LedBlinker.cpp  LedBlinker.h  Sys.cpp  broker.h  limero.cpp  log.h  logger.cpp  main.cpp  math.cpp
brain/: CMakeLists.txt  README.MD  workspace.code-workspace
brain/src/: brain.cpp
broker/: README.MD
broker/src/: BrokerBase.h  BrokerIceoryx.cpp  BrokerIceoryx.h  BrokerRedis.cpp  BrokerRedis.h  BrokerRedisJson.cpp  BrokerRedisJson.h  BrokerZenoh.cpp  BrokerZenoh.h
common/src/: BrokerAbstract.h  BrokerBase.h  CborDeserializer.cpp  CborDeserializer.h  CborDump.cpp  CborDump.h  CborReader.cpp  CborReader.h  CborSerializer.cpp  CborSerializer.h  CborWriter.cpp  CborWriter.h  Crc32.cpp  Crc32.h  Frame.cpp  Frame.h  ReflectFromCbor.h  ReflectToCbor.h  ReflectToDisplay.h  broker_protocol.h  config.h  context.h  frame.cpp  frame.h  limero.h  ppp_frame.cpp  ppp_frame.h  util.cpp  util.h
docs/: Products  SoftwareComponents  Untitled Diagram.drawio  architecture.gliffy  products
linux/src/: Sys.cpp  limero.cpp  log.h  logger.cpp  logger.h
proxy/: CMakeLists.txt  workspace.code-workspace
proxy/src/: DtrRts.cpp  SessionAbstract.h  SessionSerial.cpp  SessionSerial.h  SessionUdp.cpp  SessionUdp.h  Udp.cpp  Udp.h  cborTest.cpp  config.cpp  proxyCli.cpp  redis-elastic.cpp  redis-test.cpp  serial.cpp  serial.h  serialProxy.cpp  serialProxyCbor.cpp  serialProxyJson.cpp  test.cpp  udpProxy.cpp  udp_client.cpp
redis2elastic/: CMakeLists.txt
redis2elastic/src/: redis2elastic.cpp
scripts/: elastic.sh  elk.sh  grafana.sh  nodered.sh  redis.sh
src-pico/: CMakeLists.txt  README.MD
